--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "portfolio",
+  "name": "stitchy",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://meihwg.github.io",
+  "homepage": "https://meihwg.github.io/stitchy-crochet",
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^6.1.1",
     "iconify": "^1.4.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
-    "typescript": "^5.4.5",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1"
+    "@iconify/react": "^4.1.1",
+    "sass": "^1.88.0"
   }
 }
