--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^6.1.1",
+    "i18next": "^25.1.3",
+    "i18next-browser-languagedetector": "^8.1.0",
     "iconify": "^1.4.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
